--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -13,6 +13,7 @@
   "command.help.text.pollSetting.multi-vote": "Allow users to vote for X options",
   "command.help.text.pollSetting.progress": "During the poll, show how many votes each answer option got",
   "command.help.text.pollSetting.public-add-option": "Allow all users to add additional options",
+  "command.help.text.pollSetting.show-voters": "Show extra informations on who voted for what during poll",
   "command.help.text.simple": "To create a poll with the answer options \"{{.Yes}}\" and \"{{.No}}\" type `/{{.Trigger}} \"Question\"`",
   "dialog.addOption.element.displayName": "Option",
   "dialog.addOption.submitLabel": "Add",
@@ -28,6 +29,7 @@
   "dialog.end.title": "Confirm Poll End",
   "poll.addAnswerOption.duplicate": "Duplicate option: {{.Option}}",
   "poll.addAnswerOption.empty": "Empty option not allowed",
+  "poll.validateShowVotersOption.error": "Poll can't be Anonymous and Show Voters",
   "poll.button.addOption": "Add Option",
   "poll.button.deletePoll": "Delete Poll",
   "poll.button.endPoll": "End Poll",
@@ -67,5 +69,13 @@
     "one": "Your vote has been counted. You have {{.Remains}} vote left.",
     "other": "Your vote has been counted. You have {{.Remains}} votes left."
   },
-  "response.vote.updated": "Your vote has been updated."
+  "response.vote.updated": "Your vote has been updated.",
+  "rhs.card.poll.answer.heading": {
+    "few": "{{.Answer}} ({{.Count}} votes)",
+    "many": "{{.Answer}} ({{.Count}} votes)",
+    "one": "{{.Answer}} ({{.Count}} vote)",
+    "other": "{{.Answer}} ({{.Count}} votes)"
+  },
+  "rhs.card.poll.createdBy": "Create by",
+  "rhs.card.poll.voter.seperator": "and"
 }
