Add RHS informations card to show users votes (#431)
* Add RHS informations card to show users votes

* Fix missing code coverage

* Fix missing code coverage for poll

* Add show-voters settings to README

* Move --show-voters with --progress settings

* Update to use p.ConvertUserIDToDisplayName

This converter add more informative on mouse over a name

* Replace localization function in transform.go

Use bundle.LocalizeWithConfig instead of MustLocalize,
because MustLocalize causes panic if translation is missing.

* Fix missing localize and converter update

--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -67,5 +67,13 @@
     "one": "Your vote has been counted. You have {{.Remains}} vote left.",
     "other": "Your vote has been counted. You have {{.Remains}} votes left."
   },
-  "response.vote.updated": "Your vote has been updated."
+  "response.vote.updated": "Your vote has been updated.",
+  "rhs.card.poll.answer.heading": {
+    "few": "{{.Answer}} ({{.Count}} votes)",
+    "many": "{{.Answer}} ({{.Count}} votes)",
+    "one": "{{.Answer}} ({{.Count}} vote)",
+    "other": "{{.Answer}} ({{.Count}} votes)"
+  },
+  "rhs.card.poll.createdBy": "Create by",
+  "rhs.card.poll.voter.seperator": "and"
 }
