--- a/assets/i18n/active.de.json
+++ b/assets/i18n/active.de.json
@@ -151,7 +151,7 @@
   },
   "poll.message.totalVotes": {
     "hash": "sha1-9a86d661838edccd7408678f9c1bb65de3d889c0",
-    "other": "**Anzahl der abgegeben Stimmen**: {{.TotalVotes}}"
+    "other": "**Anzahl der abgegebenen Stimmen**: {{.TotalVotes}}"
   },
   "poll.newPoll.unrecognizedSetting": {
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
