update ja translations

--- a/assets/i18n/active.ja.json
+++ b/assets/i18n/active.ja.json
@@ -214,5 +214,17 @@
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
     "other": "投票が更新されました。"
+  },
+  "rhs.card.poll.answer.heading": {
+    "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
+    "other": "{{.Answer}} ({{.Count}}票)"
+  },
+  "rhs.card.poll.createdBy": {
+    "hash": "sha1-5d73cc30510c739ed68c572c5199e106d325b648",
+    "other": "作成者 "
+  },
+  "rhs.card.poll.voter.seperator": {
+    "hash": "sha1-cffa50a32cb13a240d705317bcec65dd1f31b6ad",
+    "other": "と"
   }
 }
