--- a/assets/i18n/active.fr.json
+++ b/assets/i18n/active.fr.json
@@ -129,11 +129,13 @@
   },
   "poll.button.resetVotes": {
     "hash": "sha1-4a61c63020a340f21d6986159f8c2dcce0f25a79",
+    "many": "Réinitialiser vos votes",
     "one": "Réinitialiser votre vote",
     "other": "Réinitialiser vos votes"
   },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
+    "many": "{{.Answer}} ({{.Count}} votes)",
     "one": "{{.Answer}} ({{.Count}} vote)",
     "other": "{{.Answer}} ({{.Count}} votes)"
   },
@@ -175,7 +177,7 @@
   },
   "response.addOption.invalidPermission": {
     "hash": "sha1-eb74073a478570ac636c47871075938350adec37",
-    "other": "Seule la créatrice ou le créateur du sondage et les administrateurs systèmes peuvent ajouter des options."
+    "other": "Seule la créatrice ou le créateur du sondage et les administratrices et administrateurs systèmes peuvent ajouter des options."
   },
   "response.addOption.success": {
     "hash": "sha1-274a82da87d06380a636d43c8aa480f207c7928b",
@@ -183,7 +185,7 @@
   },
   "response.deletePoll.invalidPermission": {
     "hash": "sha1-97d4d7bd45a958bc6eea2bd33401a3bc5056cc1d",
-    "other": "Seule la créatrice ou le créateur du sondage et les administrateurs systèmes peuvent le supprimer."
+    "other": "Seule la créatrice ou le créateur du sondage et les administratrices et administrateurs systèmes peuvent le supprimer."
   },
   "response.deletePoll.success": {
     "hash": "sha1-cb754e0331888691ff5e4179b22155fc6df1ac1d",
@@ -191,7 +193,7 @@
   },
   "response.endPoll.invalidPermission": {
     "hash": "sha1-6fec2172c9fbcf6944812318684b19ebda485a82",
-    "other": "Seule la créatrice ou le créateur du sondage et les administrateurs systèmes peuvent le clore."
+    "other": "Seule la créatrice ou le créateur du sondage et les administratrices et administrateurs systèmes peuvent le clore."
   },
   "response.endPoll.successfully": {
     "hash": "sha1-a4fba46ee42d558010f595fec2e1e451cf3d4d73",
@@ -211,11 +213,22 @@
   },
   "response.vote.multi.updated": {
     "hash": "sha1-213785e569b994863b96b984772e9497f8629bbc",
+    "many": "Votre vote a été pris en compte. Vous avez encore {{.Remains}} votes.",
     "one": "Votre vote a été pris en compte. Vous avez encore {{.Remains}} vote.",
     "other": "Votre vote a été pris en compte. Vous avez encore {{.Remains}} votes."
   },
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
     "other": "Votre vote a été mis à jour."
+  },
+  "rhs.card.poll.answer.heading": {
+    "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
+    "many": "{{.Answer}} ({{.Count}} votes)",
+    "one": "{{.Answer}} ({{.Count}} votes)",
+    "other": "{{.Answer}} ({{.Count}} votes)"
+  },
+  "rhs.card.poll.voter.seperator": {
+    "hash": "sha1-cffa50a32cb13a240d705317bcec65dd1f31b6ad",
+    "other": "et"
   }
 }
