Update Spanish translation for 1.6

--- a/assets/i18n/active.es.json
+++ b/assets/i18n/active.es.json
@@ -217,5 +217,18 @@
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
     "other": "Su voto ha sido actualizado."
+  },
+  "rhs.card.poll.answer.heading": {
+    "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
+    "one": "{{.Answer}} ({{.Count}} voto)",
+    "other": "{{.Answer}} ({{.Count}} votos)"
+  },
+  "rhs.card.poll.createdBy": {
+    "hash": "sha1-5d73cc30510c739ed68c572c5199e106d325b648",
+    "other": "Creado por"
+  },
+  "rhs.card.poll.voter.seperator": {
+    "hash": "sha1-cffa50a32cb13a240d705317bcec65dd1f31b6ad",
+    "other": "y"
   }
 }
