chore: fix application messages

--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -10,7 +10,7 @@
   "command.help.text.options": "You can customize the options by typing `/{{.Trigger}} \"Question\" \"Answer 1\" \"Answer 2\" \"Answer 3\"`",
   "command.help.text.pollSetting.anonymous": "Don't show who voted for what when the poll ends",
   "command.help.text.pollSetting.introduction": "Poll Settings provider further customization, e.g. `/{{.Trigger}} \"Question\" \"Answer 1\" \"Answer 2\" \"Answer 3\" --progress --anonymous`. The available Poll Settings are:",
-  "command.help.text.pollSetting.multi-vote": "Allow users to vote for X options",
+  "command.help.text.pollSetting.multi-vote": "Allow users to vote for X options. Default is 1. If X is 0, users can vote for all options even after adding options.",
   "command.help.text.pollSetting.progress": "During the poll, show how many votes each answer option got",
   "command.help.text.pollSetting.public-add-option": "Allow all users to add additional options",
   "command.help.text.simple": "To create a poll with the answer options \"{{.Yes}}\" and \"{{.No}}\" type `/{{.Trigger}} \"Question\"`",
@@ -21,7 +21,7 @@
   "dialog.create.title": "Create Poll",
   "dialog.createPoll.option": "Option {{ .Number }}",
   "dialog.createPoll.question": "Question",
-  "dialog.createPoll.setting.multi": "The number of options that an user can vote on.",
+  "dialog.createPoll.setting.multi": "The number of options that an user can vote on. 0 is meaning that users can vote for all options even after adding options.",
   "dialog.delete.submitLabel": "Delete",
   "dialog.delete.title": "Confirm Poll Delete",
   "dialog.end.submitLabel": "End",
