--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -47,6 +47,12 @@
   "poll.endPost.text": "This poll has ended. The results are:",
   "poll.message.pollSettings": "**Poll Settings**: {{.Settings}}",
   "poll.message.totalVotes": "**Total votes**: {{.TotalVotes}}",
+  "poll.message.totalVotesMulti": {
+    "few": "**Total votes**: {{.TotalVotes}} ({{ .TotalVoters }} voters)",
+    "many": "**Total votes**: {{.TotalVotes}} ({{ .TotalVoters }} voters)",
+    "one": "**Total votes**: {{.TotalVotes}} ({{ .TotalVoters }} voter)",
+    "other": "**Total votes**: {{.TotalVotes}} ({{ .TotalVoters }} voters)"
+  },
   "poll.newPoll.unrecognizedSetting": "Unrecognized poll setting: {{.Setting}}",
   "poll.newPoll.votesettings.invalidSetting": "The number of votes must be a positive number and less than or equal to the number of options. You specified \"{{.MaxVotes}}\", but the number of options is \"{{.Options}}\".",
   "poll.newPoll.votesettings.unexpectedError": "Unexpected error happens when parsing {{.Setting}}",
@@ -74,6 +80,6 @@
     "one": "{{.Answer}} ({{.Count}} vote)",
     "other": "{{.Answer}} ({{.Count}} votes)"
   },
-  "rhs.card.poll.createdBy": "Create by",
+  "rhs.card.poll.createdBy": "Created by",
   "rhs.card.poll.voter.seperator": "and"
 }
