--- a/assets/i18n/active.es.json
+++ b/assets/i18n/active.es.json
@@ -39,6 +39,10 @@
     "hash": "sha1-413dccc620dcf0d910c2cba09522443793fbcb33",
     "other": "No mostrar quién votó por qué cosa al final de la encuesta"
   },
+  "command.help.text.pollSetting.anonymous-creator": {
+    "hash": "sha1-59c4b987ae73b46ba774f8bf78bc742fdf4d9ab3",
+    "other": "No mostrar el autor de la encuesta"
+  },
   "command.help.text.pollSetting.introduction": {
     "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
     "other": "Configuraciones de encuesta para proveer más personalización, por ejemplo. `/{{.Trigger}} \"Pregunta\" \" Respuesta 1\" \"Respuesta 2\" \"Respuesta 3\" --progress --anonymous`. Las configuraciones de encuesta disponibles son:"
@@ -128,9 +132,9 @@
     "other": "Terminar encuesta"
   },
   "poll.button.resetVotes": {
-    "hash": "sha1-4a61c63020a340f21d6986159f8c2dcce0f25a79",
-    "one": "Restablecer tu voto",
-    "other": "Restablecer tus votos"
+    "hash": "sha1-802a25521fbfd37564097fde5f358a591695d19c",
+    "one": "Resetear su voto",
+    "other": "Resetear sus votos"
   },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
@@ -152,6 +156,11 @@
   "poll.message.totalVotes": {
     "hash": "sha1-9a86d661838edccd7408678f9c1bb65de3d889c0",
     "other": "**Votos totales**: {{.TotalVotes}}"
+  },
+  "poll.message.totalVotesMulti": {
+    "hash": "sha1-708616dbb5432949c4e8264a3d63eb80c9933d26",
+    "one": "**Votos totales**: {{.TotalVotes}} ({{ .TotalVoters }} votante)",
+    "other": "**Votos totales**: {{.TotalVotes}} ({{ .TotalVoters }} votantes)"
   },
   "poll.newPoll.unrecognizedSetting": {
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
